[package]
name = "asmo"
version = "0.3.1"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "net", "time", "sync"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
local-ip-address = "0.6"
scopeguard = "1"
libc = "0.2"